[package]
edition = "2021"
name = "aoc"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
arrayvec = "0.7.2"
derive_more = "0.99.17"
euclid = "0.22.7"
itertools = "0.10.5"
macros = { path = "macros" }
nom = "7.1.1"
paste = "1.0.9"
structopt = "0.3.26"
strum = { version = "0.24.1", features = ["derive"] }

[workspace]
members = ["macros"]
