[package]
edition = "2021"
name = "aoc"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
arrayvec = { version = "0.7.2", optional = true }
derive_more = "0.99.17"
euclid = "0.22.7"
itertools = { version = "0.10.5", optional = true }
macros = { path = "./crates/macros", optional = true }
nom = "7.1.1"
paste = "1.0.9"
hashbrown = "0.13.1"

[dependencies.clap]
version = "4.0.29"
features = ["derive", "deprecated"]
optional = true

[[bin]]
name = "aoc"
required-features = ["full", "clap"]

[features]
default = ["full", "clap"]
full = ["y2021", "y2022"]
y2021 = ["arrayvec", "itertools", "macros"]
y2022 = []

[workspace]
members = ["crates/*"]
