[package]
edition = "2021"
name = "macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
heck = "0.3.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.33"
quote = "1.0.10"
syn = {version = "1.0.82", features = ["full"]}

[lib]
proc-macro = true
