[package]
edition = "2021"
name = "macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full"] }

[lib]
proc-macro = true
