[package]
edition = "2021"
name = "day01"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day01-part2"
path = "src/bin/part2.rs"

[dependencies]
aoc = {path = "../.."}
