[package]
edition = "2021"
name = "day02"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day02"

[[bin]]
name = "day02-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day02-part2"
path = "src/bin/part2.rs"

[dependencies]
common = {path = "../common"}
thiserror = "1.0.30"
