[package]
edition = "2021"
name = "day03"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day03"

[[bin]]
name = "day03-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day03-part2"
path = "src/bin/part2.rs"

[dependencies]
aoc = {path = "../.."}
thiserror = "1.0.30"
