[package]
edition = "2021"
name = "macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
paste = "1.0.9"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full"] }

[dev-dependencies]
runtime-macros = "1.0.0"
walkdir = "2.3.2"
